--- a/src/LogoFX.Client.Testing.EndToEnd.FlaUI/LogoFX.Client.Testing.EndToEnd.FlaUI.csproj
+++ b/src/LogoFX.Client.Testing.EndToEnd.FlaUI/LogoFX.Client.Testing.EndToEnd.FlaUI.csproj
@@ -10,8 +10,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <OutputPath>..\bin\release</OutputPath>
-    <DocumentationFile>..\bin\release\LogoFX.Client.Testing.EndToEnd.FlaUI.xml</DocumentationFile>
+    <OutputPath>..\bin\netstandard\release</OutputPath>
+    <DocumentationFile>..\bin\netstandard\release\LogoFX.Client.Testing.EndToEnd.FlaUI.xml</DocumentationFile>
+    <EmbedAllSources>True</EmbedAllSources>
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
 
   <ItemGroup>
