--- a/src/LogoFX.Client.Testing.EndToEnd.FlaUI/LogoFX.Client.Testing.EndToEnd.FlaUI.csproj
+++ b/src/LogoFX.Client.Testing.EndToEnd.FlaUI/LogoFX.Client.Testing.EndToEnd.FlaUI.csproj
@@ -19,7 +19,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Attest.Testing.Contracts" Version="2.0.0" />
+    <PackageReference Include="Attest.Testing.Contracts" Version="2.1.0-rc1" />
     <PackageReference Include="FlaUI.Core" Version="3.0.0" />
   </ItemGroup>
 
