--- a/src/LogoFX.Client.Testing.EndToEnd.FlaUI/LogoFX.Client.Testing.EndToEnd.FlaUI.csproj
+++ b/src/LogoFX.Client.Testing.EndToEnd.FlaUI/LogoFX.Client.Testing.EndToEnd.FlaUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
@@ -15,7 +15,7 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Attest.Testing.Contracts" Version="2.1.0-rc1" />
+    <PackageReference Include="Attest.Testing.Contracts" Version="2.1.0-rc2" />
     <PackageReference Include="FlaUI.Core" Version="3.2.0" />
   </ItemGroup>
 </Project>
