--- a/devops/pack/contents/LogoFX.Client.Testing.EndToEnd.FlaUI.nuspec
+++ b/devops/pack/contents/LogoFX.Client.Testing.EndToEnd.FlaUI.nuspec
@@ -2,13 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>LogoFX.Client.Testing.EndToEnd.FlaUI</id>
-    <version>2.2.0-rc3</version>
+    <version>2.2.0</version>
     <title>LogoFX.Client.Testing.EndToEnd.FlaUI</title>
     <authors>Gennady Verdel</authors>
     <owners>Gennady Verdel</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <licenseUrl>https://github.com/LogoFX/logofx-client-testing-e2e/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://github.com/LogoFX/logofx-client-testing-e2e</projectUrl>
+    <licenseUrl>https://github.com/LogoFX/logofx-client-testing-e2e-flaui/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/LogoFX/logofx-client-testing-e2e-flaui</projectUrl>
     <iconUrl>https://github.com/LogoFX/logofx-assets/blob/master/icons/icon.png?raw=true</iconUrl>
     <description>LogoFX Client Testing EndToEnd FlaUI containing implementation of Application Facade using FlaUI.</description>
     <summary>LogoFX Client Testing EndToEnd FlaUI containing implementation of Application Facade using FlaUI.</summary>
@@ -17,5 +17,7 @@
       <dependency id="Attest.Testing.Contracts" version="2.3.2" />
       <dependency id="FlaUI.Core" version="3.0.0" />
     </dependencies>
+    <tags>framework logofx dotnet</tags>
+    <repository type="Open Source" url="https://github.com/LogoFX/logofx-client-testing-e2e-flaui" />
   </metadata>
 </package>
